<resources>
    <string name="app_name">smart_job_finder</string>-->
    <string name="title_home">Smart Job Finder</string>
    <string name="title_dashboard">Likes</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="your_application">Your Application:</string>
    <string name="sent">Sent</string>
    <string name="put_your_application_here">Put your application here</string>
    <string name="your_email">Your E-Mail</string>
    <string name="email">E-Mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>