<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.SentActivity">

    <TextView
        android:id="@+id/to_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/application_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_application"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_input" />

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/from"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/user_email_input"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_label" />

    <TextView
        android:id="@+id/email_input"
        android:layout_width="364dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_lable" />

    <EditText
        android:id="@+id/application_input"
        android:layout_width="362dp"
        android:layout_height="342dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/put_your_application_here"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_label" />

    <Button
        android:id="@+id/sent_button"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/sent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_input" />

</androidx.constraintlayout.widget.ConstraintLayout>